🐞 fix: grid container overflow

--- a/client/src/components/Dashboard/Main/FriendTab/FriendList/FriendList.css
+++ b/client/src/components/Dashboard/Main/FriendTab/FriendList/FriendList.css
@@ -7,6 +7,4 @@
     display: flex;
     flex-direction: column;
     row-gap: 12px;
-
-    height: 100%;
 }
